# backend/api/openapi.yaml
@@ -89,6 +89,36 @@ paths:
         explode: true
         schema:
           type: integer
+      - name: q
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: status
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: boolean
+      - name: start
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          format: date-time
+      - name: end
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          format: date-time
       responses:
         "200":
           description: Server Information
@@ -132,43 +162,7 @@ paths:
       security:
       - bearerAuth: []
       x-swagger-router-controller: Server
-    delete:
-      tags:
-      - server
-      summary: delete one or many servers
-      operationId: serverDELETE
-      parameters:
-      - name: array_id
-        in: query
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
-      responses:
-        "200":
-          description: server information
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Success'
-        "401":
-          description: Unauthorized
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Error'
-        "404":
-          description: Not found
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Error'
-      security:
-      - bearerAuth: []
-      x-swagger-router-controller: Server
+    
   /server/{id}:
     put:
       tags:
@@ -212,6 +206,42 @@ paths:
       security:
       - bearerAuth: []
       x-swagger-router-controller: Server
+    delete:
+      tags:
+      - server
+      summary: delete server
+      operationId: serverDELETE
+      parameters:
+      - name: id
+        in: path
+        description: ID of the server to update
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: server information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Success'
+        "401":
+          description: Unauthorized
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "404":
+          description: Not found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+      - bearerAuth: []
+      x-swagger-router-controller: Server
   /server/history/{id}:
     get:
       tags:
@@ -226,6 +256,22 @@ paths:
         explode: false
         schema:
           type: string
+      - name: start
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          format: date-time
+      - name: end
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          format: date-time
       responses:
         "200":
           description: Server History
@@ -273,59 +319,6 @@ paths:
       security:
       - bearerAuth: []
       x-swagger-router-controller: Server
-  /search:
-    get:
-      tags:
-      - others
-      summary: search servers
-      operationId: searchGET
-      parameters:
-      - name: q
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: status
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: boolean
-      - name: start
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-          format: date-time
-      - name: end
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-          format: date-time
-      responses:
-        "200":
-          description: server information
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/inline_response_200_1'
-        "404":
-          description: Failed
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      security:
-      - bearerAuth: []
-      x-swagger-router-controller: Others
   /exportXLSX:
     get:
       tags:
