# backend/service/ServerService.js
@@ -8,32 +8,43 @@ const {
   NodeSSH
 } = require('node-ssh')
 
+const LIMIT = 5
 /**
  * delete one or many servers
  *
  * array_id List 
  * returns Success
  **/
-exports.serverDELETE = async function (array_id) {
-  array_id.forEach(item => {
-    Server.findOneAndDelete(item, async (err, server) => {
-      if (err) return utils.respondWithCode(500, {
-        message: 'Something went wrong.',
-        code: 500
-      });
-      if (!server) {
-        return utils.respondWithCode(404, {
-          message: 'Server is not exist',
-          code: 404
-        });
-      }
-    })
+exports.serverDELETE = async function (id) {
+  let index = await Server.countDocuments({
+    _id: {
+      '$lt': id
+    }
   })
 
-  return utils.respondWithCode(200, {
-    message: 'Delete successfully',
-    code: 200
-  })
+  let page = Math.ceil(index / LIMIT)
+
+  try {
+
+    let result = await Server.findOneAndDelete({
+      _id: id
+    })
+
+    let count = await Server.countDocuments()
+    const totalPage = Math.ceil(count / LIMIT)
+
+    return utils.respondWithCode(200, {
+      page,
+      totalPage
+    })
+  } catch (err) {
+
+    return utils.respondWithCode(500, {
+      message: 'Something went wrong.',
+      code: 500
+    });
+
+  }
 }
 
 
@@ -43,13 +54,35 @@ exports.serverDELETE = async function (array_id) {
  * p Integer Numeric ID of page (optional)
  * returns inline_response_200
  **/
-exports.serverGET = async function (p) {
+var serverGET = exports.serverGET = async function (p, q, status, start, end) {
   const page = +p || 1;
-  const LIMIT = 20
-  const count = await Server.countDocuments();
-  const totalPage = Math.ceil(count / LIMIT)
   try {
-    var servers = await Server.find({}).limit(LIMIT).skip((page - 1) * LIMIT)
+    let objSearch = {}
+
+    if (start || end) {
+
+      objSearch.createdAt = {}
+
+      if (start) {
+        start = new Date(start).toISOString()
+        objSearch.createdAt['$gte'] = start
+      }
+
+      if (end) {
+        end = new Date(end).toISOString()
+        objSearch.createdAt['$lt'] = end
+      }
+
+    }
+
+    if (q) objSearch.IP = q
+
+    if (status) objSearch.status = status
+
+    const count = await Server.countDocuments(objSearch);
+    const totalPage = Math.ceil(count / LIMIT)
+
+    var servers = await Server.find(objSearch).limit(LIMIT).skip((page - 1) * LIMIT)
 
     return utils.respondWithCode(200, {
       servers,
@@ -67,22 +100,50 @@ exports.serverGET = async function (p) {
  * id Integer Numeric ID of page
  * returns inline_response_200_1
  **/
-exports.serverHistoryIdGET = async function (id) {
+exports.serverHistoryIdGET = async function (start, end, id) {
   try {
-    console.log(id)
-      const server =  await Server.findById(id)
-      if (!server) {
-        return utils.respondWithCode(404, {
-          message: 'Server is not exist',
-          code: 404
-        });
-      } else {
+    let objSearch = {}
+    let date = false
+    if (start || end) {
+      date = true
+
+      objSearch['change_time'] = {}
+
+      if (start) {
+        start = new Date(start).toISOString()
+        objSearch['change_time']['$gte'] = start
+      }
+
+      if (end) {
+        end = new Date(end).toISOString()
+        objSearch['change_time']['$lt'] = end
+      }
+
+    }
+    
+    const server = await Server.findById(id)
+
+    if (!server) {
+      return utils.respondWithCode(404, {
+        message: 'Server is not exist',
+        code: 404
+      });
+    } else {
+      if(date) {
+        const data = await Server.findById(id).elemMatch(
+          "history", objSearch )
         return utils.respondWithCode(200, {
-          data: server.history
+          data: data?.history
         })
       }
-  }
-  catch(error) {
+      else {
+        return utils.respondWithCode(200, {
+            data: server.history
+        })
+      }
+    }
+  } catch (error) {
+    console.log(error)
     return utils.respondWithCode(500, error)
   }
 }
@@ -111,6 +172,22 @@ exports.serverIdPUT = async function (body, id) {
         obj[`${item}_old`] = server[item]
       })
 
+      if (body.password && body.password !== server.password) {
+        try {
+          let checkStatus = await ssh.connect({
+            host: server.IP,
+            username: server.username,
+            port: server.port,
+            password: server.password,
+          })
+        } catch (error) {
+          return utils.respondWithCode(409, {
+            message: 'Wrong password',
+            code: 409
+          })
+        }
+      }
+
       Object.assign(server, body)
 
       server.history.push(obj)
@@ -121,9 +198,9 @@ exports.serverIdPUT = async function (body, id) {
         message: 'Update successfully',
         code: 200
       })
-  }
     }
-  catch(error) {
+  } catch (error) {
+    console.log(error)
     return utils.respondWithCode(500, error);
   }
 }
@@ -136,6 +213,18 @@ exports.serverIdPUT = async function (body, id) {
  * returns Success
  **/
 exports.serverPOST = async function (body) {
+  const servers = await Server.find({
+    IP: body.ip
+  })
+
+  for (let i = 0; i < servers.length; i++) {
+    if (servers[i].port === body.port) {
+      return utils.respondWithCode(409, {
+        code: 409,
+        message: 'Error. Existed server'
+      })
+    }
+  }
 
   const newServer = new Server({
     IP: body.ip,
@@ -162,17 +251,16 @@ exports.serverPOST = async function (body) {
 
     newServer.status = true
     newServer.history[0].status_old = true
-    await newServer.save()
   } catch (error) {}
 
   try {
     await newServer.save()
-    return utils.respondWithCode(200, {
-      message: 'Created Successfully',
-      code: 200
-    })
+    let index = await Server.countDocuments()
+    let page = Math.ceil(index / LIMIT)
+    return serverGET(page)
+
   } catch (error) {
-    return utils.respondWithCode(400, error)
+    return utils.respondWithCode(500, error)
   }
 };
 
@@ -246,7 +334,7 @@ exports.serverStatusIdGET = async function (id) {
 exports.checkStatusContinuous = async function () {
   const server = await Server.find({})
   if (server) {
-    server.forEach( async (item) => {
+    server.forEach(async (item) => {
       const {
         password,
         username,
